--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -12,15 +12,15 @@
     <form class="form">
       <label>
         First delay (ms)
-        <input type="number" name="delay" />
+        <input type="number" name="delay" required />
       </label>
       <label>
         Delay step (ms)
-        <input type="number" name="step" />
+        <input type="number" name="step" required />
       </label>
       <label>
         Amount
-        <input type="number" name="amount" />
+        <input type="number" name="amount" required />
       </label>
       <button type="submit">Create promises</button>
     </form>
